--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,10 @@ plugins {
 	id 'org.springframework.boot' version '2.6.7'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id "com.github.node-gradle.node" version "3.2.1"
 }
+
+
 
 group = 'com.clv'
 version = '0.0.1-SNAPSHOT'
@@ -21,6 +24,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
 	implementation 'net.sf.jasperreports:jasperreports:6.19.0'
 	implementation 'com.lowagie:itext:2.1.7'
@@ -31,6 +35,37 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+// node {
+//     version = '16.14.2'
+//     workDir = file("${project.projectDir}/../frontend/node")
+// }
+
+// processResources{
+//     dependsOn 'vueBuild'
+//     dependsOn 'copyFrontendToBuild'
+// }
+
+// task copyFrontendToBuild(type: Copy) {
+// 	from "$projectDir/../frontend/dist/"
+//     into "$buildDir/resources/main/static"
+// }
+
+// task vueBuild(type: YarnTask) {
+// 	dependsOn 'vueInstall'
+//     execOverrides {
+//         it.workingDir = '../frontend'
+//     }
+//     args = ['run', 'build']
+// }
+
+// task vueInstall (type: YarnTask) {
+//     execOverrides {
+//         it.ignoreExitValue = true
+//         it.workingDir = '../frontend'
+//     }
+//     args = ['install']
+// }
 
 tasks.named('test') {
 	useJUnitPlatform()
